--- a/templates/currency/index.html.twig
+++ b/templates/currency/index.html.twig
@@ -3,6 +3,9 @@
 {% block title %}Hello CurrencyController!{% endblock %}
 
 {% block body %}
+    <p>
+        <a href="{{ path('currency_chart') }}" class="btn btn-primary">Графика</a>
+    </p>
     <table class="table">
         <thead>
         <tr>
