add action for download

--- a/templates/currency/index.html.twig
+++ b/templates/currency/index.html.twig
@@ -29,6 +29,9 @@
             </div>
         </form>
     </div>
+    <p>
+        <a href="{{ path('currency_download', params.all()) }}" class="btn btn-primary">Загрузить</a>
+    </p>
     <table class="table">
         <thead>
         <tr>
