--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,7 @@
     </head>
     <body>
         <div class="container">
+            {% include '_flashes.html.twig' %}
             {% block body %}{% endblock %}
         </div>
 
