--- a/templates/currency/serach.html.twig
+++ b/templates/currency/serach.html.twig
@@ -11,8 +11,10 @@
             </div>
         </div>
         <div class="form-group">
-            <button class="btn btn-primary">Пойск</button>
-            <a href="{{ path('currency') }}" class="btn btn-primary">Сброс</a>
+            <div class="row">
+                <div class="col-6">{{ form_row(formSearch.search) }}</div>
+                <div class="col-6"><a href="{{ path('currency') }}" class="btn btn-primary">Сброс</a></div>
+            </div>
         </div>
     {{ form_end(formSearch) }}
 </div>
