--- a/templates/currency/chart.html.twig
+++ b/templates/currency/chart.html.twig
@@ -2,35 +2,31 @@
 
 {% block body %}
     <div class="mt-5">
-        <form  action="" method="get">
+        {{ form_start(formFilter) }}
             <div class="row">
                 <div class="col-4">
                     <div class="form-group">
-                        <select name="char_code" class="form-control">
-                            {% for key, charCode in dropDownCharCode %}
-                                <option value="{{ key }}" {{ key == selectedCharCode ? 'selected': '' }}>{{ charCode }}</option>
-                            {% endfor %}
-                        </select>
+                        {{ form_row(formFilter.currency_unit_id) }}
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="form-group">
-                        <input type="text" class="datepicker form-control" value="{{ begin }}" name="begin">
+                        {{ form_row(formFilter.begin) }}
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="form-group">
-                        <input type="text" class="datepicker form-control" value="{{ end }}" name="end">
+                        {{ form_row(formFilter.end) }}
                     </div>
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-primary">Показать</button>
+                    {{ form_row(formFilter.save) }}
                 </div>
             </div>
 
-        </form>
+        {{ form_end(formFilter) }}
     </div>
-    <div id="currency-chart" style="width: 900px; height: 500px" data-char-code="{{ selectedCharCode }}" data-currencies="{{ currencies|json_encode }}"></div>
+    <div id="currency-chart" style="width: 900px; height: 500px" data-char-code="{{ currencyUnit.charCode }}" data-currencies="{{ currencies|json_encode }}"></div>
 {% endblock %}
 
 {% block javascripts %}
