--- a/templates/currency/index.html.twig
+++ b/templates/currency/index.html.twig
@@ -6,7 +6,7 @@
     <p>
         <a href="{{ path('currency_chart') }}" class="btn btn-primary">Графика</a>
     </p>
-    {% include 'currency/serach.html.twig' %}
+    {% include 'currency/_serach.html.twig' %}
     <p>
         <a href="{{ path('currency_download', params.all()) }}" class="btn btn-primary">Загрузить</a>
     </p>
