--- a/templates/currency/index.html.twig
+++ b/templates/currency/index.html.twig
@@ -8,7 +8,7 @@
     </p>
     {% include 'currency/_serach.html.twig' %}
     <p>
-        <a href="{{ path('currency_download', params.all()) }}" class="btn btn-primary">Загрузить</a>
+        <a href="{{ path('currency_download', app.request.query.all()) }}" class="btn btn-primary">Загрузить</a>
     </p>
     <div>
         {{ form_start(downloadRbc)}}
