loads past date

--- a/templates/currency/index.html.twig
+++ b/templates/currency/index.html.twig
@@ -26,6 +26,9 @@
             </div>
         {{ form_end(downloadRbc) }}
     </div>
+    <div>
+
+    </div>
     <table class="table">
         <thead>
         <tr>
